--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   },
   "devDependencies": {
     "codecov": "^3.6.5",
-    "nock": "^12.0.3"
+    "nock": "^12.0.3",
+    "puppeteer": "3.1.0"
   },
   "keywords": [
     "api",
