--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "lodash": "^4.17.15",
     "mongodb": "^3.3.4",
     "request": "^2.88.0"
   },
@@ -22,7 +23,8 @@
   },
   "devDependencies": {
     "codecov": "^3.6.5",
-    "nock": "^12.0.3"
+    "nock": "^12.0.3",
+    "puppeteer": "3.1.0"
   },
   "keywords": [
     "api",
