add continueLast feature and began scraping full wiki

--- a/dataCollectors/urlCollectorConfig.json
+++ b/dataCollectors/urlCollectorConfig.json
@@ -2,7 +2,7 @@
   {
     "name": "males",
     "firstPagePath": "Category:Males",
-    "lastPagePath": "?from=Vargot",
+    "lastPagePath": "?from=Varney%2C+Herbert%0AHerbert+Varney",
     "urlArray": "characterUrls",
     "jsonName": "character"
   },
